cmake_minimum_required(VERSION 3.10)
project(Roman)
enable_testing()
include(GoogleTest)
add_subdirectory(googletest/googletest)
set(GoogleTestHome ./googletest/googletest)
include_directories(${gtest_SOURCE_DIR} ${gtest_SOURCEDIR}/include)
add_executable(roman_tests roman.cc test.cc ${GoogleTestHome}/src/gtest-all.cc)
add_dependencies(roman_tests gtest)
target_link_libraries(roman_tests gtest)
gtest_discover_tests(roman_tests)
