cmake_minimum_required(VERSION 3.10)
project(Roman)
enable_testing()
include(GoogleTest)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/googletest/googletest)
include_directories(${gtest_SOURCE_DIR} ${gtest_SOURCEDIR}/include)
add_executable(roman_tests roman.cc test.cc)
add_dependencies(roman_tests gtest)
target_link_libraries(roman_tests gtest)
gtest_discover_tests(roman_tests)
